La til ratingsystem
Nå med opp til 900% mer stjerner, da etter mye om og men så klarte jeg å bruke ei liste i en scrollview uten at lista kollapset til et element.
Nå også litt finere da listens stahet ga etter i møte med min egen og denne er nå endelig temmelig sentrert.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="main_header_text">Movies</string>
     <string name="movie_description_activity_name">Movie Description</string>
 
+    <string name="icon_star_source">drawable/icon_star</string>
+    <string name="icon_star_half_source">drawable/icon_start_half</string>
 </resources>
